cmake_minimum_required(VERSION 3.24)
project(HackerRank_Solutions)

set(CMAKE_CXX_STANDARD 14)

add_executable(HackerRank_Solutions
        Diagonal_Difference/solution.cpp
        "Find the Median/Find_the_median_sorting.cpp"
        Lonely_Integer/Solution.cpp
        Min_Max_Sum/solution.cpp
        Plus_Minus/solution.cpp
        Time_Conversion/sol.cpp)
